--- a/read/i.html
+++ b/read/i.html
@@ -9,7 +9,7 @@
   h1,h2,h3 { color:#b36b00; text-align:center; }
   h1 { font-size:1.6rem; margin-bottom:5px; }
   h2 { font-size:1.2rem; margin-bottom:10px; }
-  textarea, select, input { width:100%; box-sizing:border-box; font-size:1rem; padding:8px; border-radius:6px; border:1px solid #ccc; resize:vertical; }
+  textarea, select { width:100%; box-sizing:border-box; font-size:1rem; padding:8px; border-radius:6px; border:1px solid #ccc; resize:vertical; }
   textarea { height:150px; }
   #output { display:none; margin-top:10px; }
   #output a { display:block; margin-bottom:6px; color:#0066cc; text-decoration:none; word-wrap:break-word; }
@@ -27,19 +27,8 @@
   .sponsor { background-color:#fffae6; border:1px solid #ffd42a; padding:12px; margin:15px 0; font-weight:bold; text-align:center; color:#b36b00; border-radius:6px; box-shadow:0 0 5px rgba(255,212,42,0.5); font-size:1rem; }
   footer { text-align:center; margin-top:25px; font-size:0.9rem; color:#888; }
   .backup-area { margin-top:25px; padding:12px; background:#fffbe6; border-radius:8px; border:1px solid #ffd42a; text-align:center; }
-  @media (max-width:720px){
-    body { padding:12px; }
-    textarea{ height:120px; }
-  }
-  @media (max-width:480px){
-    h1,h2,h3{ font-size:1rem; }
-    textarea{ height:120px; font-size:0.9rem; }
-    #output{ font-size:0.85rem; }
-    .page-btn{ padding:8px 12px; font-size:0.9rem; }
-    #copyBtn{ font-size:0.95rem; }
-    .input-buttons{ flex-direction:column; }
-    .input-buttons button{ flex:unset; width:100%; }
-  }
+  .top-bar { display:flex; justify-content:space-between; align-items:center; margin-bottom:10px; flex-wrap:wrap; gap:8px; }
+  .project-name { font-weight:bold; color:#555; }
 </style>
 </head>
 <body>
@@ -47,8 +36,10 @@
 <h1>Produk Live MadGazan</h1>
 <h2>Manajemen Shopee Live</h2>
 
-<label for="defaultFolder">Folder Default File TXT:</label>
-<input type="text" id="defaultFolder" placeholder="Contoh: oktober1/" value="oktober1/">
+<div class="top-bar">
+  <div class="project-name" id="projectName"></div>
+  <button id="newProjectBtn">🆕 Buat Proyek Baru</button>
+</div>
 
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
 
@@ -91,7 +82,7 @@
     <input type="file" id="importFile" accept=".json">
     <button onclick="importLocalStorage()">Import Data</button>
   </div>
-  <button style="margin-top:10px; background:#ffd0d0; border-color:#cc0000;" onclick="resetLocalStorage()">❌ Hapus Semua Data LocalStorage</button>
+  <button style="margin-top:10px; background:#ffd0d0; border-color:#cc0000;" onclick="resetLocalStorage()">❌ Hapus Semua Data LocalStorage Proyek Ini</button>
 </div>
 
 <footer>
@@ -104,174 +95,151 @@ const PAGE_OFFSET = 20;
 let allPages = [];
 let currentPage = 1;
 
+// --- Ambil proyek dari URL ---
+const urlParams = new URLSearchParams(window.location.search);
+let project = urlParams.get('project') || 'default';
+const STORAGE_PREFIX = 'appData_' + project + '_';
+document.getElementById('projectName').textContent = '📁 Proyek: ' + project;
+
+// --- Elemen utama ---
 const inputLinksEl = document.getElementById('inputLinks');
 const statsEl = document.getElementById('stats');
 const outputEl = document.getElementById('output');
 const paginationEl = document.getElementById('pagination');
 const dropdownEl = document.getElementById('fileDropdown');
-const defaultFolderEl = document.getElementById('defaultFolder');
 
-// --- Ambil proyek dari URL (optional per proyek) ---
-const urlParams = new URLSearchParams(window.location.search);
-const project = urlParams.get('project') || 'default';
-const STORAGE_PREFIX = 'appData_' + project + '_';
-
-/* === Penyimpanan & Pemulihan === */
-function getStorageKey(file='default') { return STORAGE_PREFIX + file; }
-function saveAppData(file='default') {
-  const key = getStorageKey(file);
-  const data = { inputList: inputLinksEl.value, currentPage };
-  localStorage.setItem(key, JSON.stringify(data));
-}
-function loadAppData(file='default') {
-  const key = getStorageKey(file);
-  const data = JSON.parse(localStorage.getItem(key) || '{}');
-  if (data.inputList) inputLinksEl.value = data.inputList;
-  currentPage = data.currentPage || 1;
+// --- Storage per proyek ---
+function getStorageKey(file = 'inputLinks') { return STORAGE_PREFIX + file; }
+function saveAppData() { localStorage.setItem(getStorageKey(), JSON.stringify({ inputList: inputLinksEl.value, currentPage })); }
+function loadAppData() { 
+  const data = JSON.parse(localStorage.getItem(getStorageKey()) || '{}'); 
+  if (data.inputList) inputLinksEl.value = data.inputList; 
+  currentPage = data.currentPage || 1; 
 }
 
-/* === Saat Halaman Dibuka === */
+// --- Load halaman ---
 window.addEventListener('load', () => {
-  const savedDropdown = localStorage.getItem(STORAGE_PREFIX + 'selectedFile');
+  const savedDropdown = localStorage.getItem(getStorageKey('selectedFile'));
   if (savedDropdown) dropdownEl.value = savedDropdown;
-  loadAppData(savedDropdown || 'default');
-  processLinks(); showPage(currentPage);
+  loadAppData(); processLinks(); showPage(currentPage);
 });
-dropdownEl.addEventListener('change', () => {
-  localStorage.setItem(STORAGE_PREFIX + 'selectedFile', dropdownEl.value);
-  loadAppData(dropdownEl.value || 'default'); 
-  processLinks(); 
-  showPage(currentPage);
-});
-inputLinksEl.addEventListener('input', () => { processLinks(); saveAppData(dropdownEl.value || 'default'); });
 
-/* === Tombol Input === */
-document.getElementById('clearInputLinksBtn').addEventListener('click', () => {
-  inputLinksEl.value = ''; saveAppData(dropdownEl.value || 'default'); processLinks();
+// --- Dropdown change ---
+dropdownEl.addEventListener('change', () => {
+  localStorage.setItem(getStorageKey('selectedFile'), dropdownEl.value);
+  loadAppData(); processLinks(); showPage(currentPage);
 });
-document.getElementById('copyInputLinksBtn').addEventListener('click', () => {
+inputLinksEl.addEventListener('input', () => { processLinks(); saveAppData(); });
+
+// --- Tombol ---
+document.getElementById('clearInputLinksBtn').addEventListener('click', () => { inputLinksEl.value = ''; saveAppData(); processLinks(); });
+document.getElementById('copyInputLinksBtn').addEventListener('click', () => { 
   const text = inputLinksEl.value.trim();
   if (!text) return alert('Input kosong!');
   navigator.clipboard.writeText(text).then(() => alert('Disalin!'));
 });
 document.getElementById('hapusDuplikatBtn').addEventListener('click', () => {
-  const lines = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
+  const lines = inputLinksEl.value.split('\n').map(l=>l.trim()).filter(Boolean);
   const unique = [...new Set(lines)];
-  inputLinksEl.value = unique.join('\n'); processLinks(); saveAppData(dropdownEl.value || 'default');
+  inputLinksEl.value = unique.join('\n'); processLinks(); saveAppData();
   alert('Duplikat dihapus!');
 });
 
-/* === Proses Link === */
+// --- Proses & tampilan ---
 function processLinks() {
-  const raw = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
+  const raw = inputLinksEl.value.split('\n').map(l=>l.trim()).filter(Boolean);
   const unique = [...new Set(raw)];
   const dup = raw.length - unique.length;
   allPages = [];
-  for (let i = 0; i < unique.length; i += MAX_PER_PAGE)
-    allPages.push(unique.slice(i, i + MAX_PER_PAGE));
-  if (currentPage > allPages.length) currentPage = 1;
+  for (let i=0;i<unique.length;i+=MAX_PER_PAGE) allPages.push(unique.slice(i,i+MAX_PER_PAGE));
+  if(currentPage>allPages.length) currentPage=1;
   renderStats(raw.length, unique.length, dup);
   renderPagination();
 }
-function renderStats(total, uniq, dup) {
-  statsEl.textContent =
-    `Total link diinput: ${total}\nLink unik: ${uniq}\nDuplikat dihapus: ${dup}\nTotal halaman: ${allPages.length}`;
-}
-function showPage(page) {
-  if (!allPages.length) { outputEl.style.display = 'none'; return; }
+function renderStats(total, uniq, dup){ statsEl.textContent=`Total link diinput: ${total}\nLink unik: ${uniq}\nDuplikat dihapus: ${dup}\nTotal halaman: ${allPages.length}`; }
+function showPage(page){
+  if(!allPages.length){ outputEl.style.display='none'; return; }
   currentPage = page;
-  outputEl.innerHTML = allPages[page - 1].map(l => `<a href="${l}" target="_blank">${l}</a>`).join('');
-  outputEl.style.display = 'block';
-  highlightActivePage(); saveAppData(dropdownEl.value || 'default');
+  outputEl.innerHTML = allPages[page-1].map(l=>`<a href="${l}" target="_blank">${l}</a>`).join('');
+  outputEl.style.display='block';
+  highlightActivePage(); saveAppData();
 }
-function renderPagination() {
-  paginationEl.innerHTML = '';
-  for (let i = 1; i <= allPages.length; i++) {
-    const btn = document.createElement('button');
-    btn.textContent = i + PAGE_OFFSET;
-    btn.className = 'page-btn';
-    if (i === currentPage) btn.classList.add('active');
-    btn.onclick = () => showPage(i);
+function renderPagination(){
+  paginationEl.innerHTML='';
+  for(let i=1;i<=allPages.length;i++){
+    const btn=document.createElement('button');
+    btn.textContent=i+PAGE_OFFSET;
+    btn.className='page-btn';
+    if(i===currentPage)btn.classList.add('active');
+    btn.onclick=()=>showPage(i);
     paginationEl.appendChild(btn);
   }
 }
-function highlightActivePage() {
-  document.querySelectorAll('.page-btn').forEach((btn, index) => {
-    btn.classList.toggle('active', index + 1 === currentPage);
-  });
-}
-function copyToClipboard() {
-  if (!allPages.length) return alert('Tidak ada link!');
-  const text = allPages[currentPage - 1].join('\n');
-  navigator.clipboard.writeText(text).then(() => alert('Disalin!'));
+function highlightActivePage(){ document.querySelectorAll('.page-btn').forEach((btn,index)=>btn.classList.toggle('active',index+1===currentPage)); }
+function copyToClipboard(){
+  if(!allPages.length)return alert('Tidak ada link!');
+  const text = allPages[currentPage-1].join('\n');
+  navigator.clipboard.writeText(text).then(()=>alert('Disalin!'));
 }
 
-/* === Backup & Import === */
-function exportLocalStorage() {
-  const data = {};
-  for (let i = 0; i < localStorage.length; i++) {
-    const key = localStorage.key(i);
-    if (key.startsWith(STORAGE_PREFIX)) data[key] = localStorage.getItem(key);
+// --- Backup / import / reset ---
+function exportLocalStorage(){
+  const data={};
+  for(let i=0;i<localStorage.length;i++){
+    const key=localStorage.key(i);
+    if(key.startsWith(STORAGE_PREFIX)) data[key]=localStorage.getItem(key);
   }
-  const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
-  const url = URL.createObjectURL(blob);
-  const a = document.createElement('a');
-  a.href = url; a.download = 'madgazan_backup_' + project + '.json'; a.click();
+  const blob=new Blob([JSON.stringify(data,null,2)],{type:'application/json'});
+  const url=URL.createObjectURL(blob);
+  const a=document.createElement('a'); a.href=url; a.download=`backup_${project}.json`; a.click();
   URL.revokeObjectURL(url);
-  alert('✅ Data berhasil disimpan ke file backup');
+  alert('✅ Data proyek berhasil disimpan');
 }
-function importLocalStorage() {
+function importLocalStorage(){
   const fileInput = document.getElementById('importFile');
-  const file = fileInput.files[0];
-  if (!file) return alert('Pilih file JSON dulu.');
-  const reader = new FileReader();
-  reader.onload = function(e) {
-    try {
-      const data = JSON.parse(e.target.result);
-      Object.keys(data).forEach(k => localStorage.setItem(k, data[k]));
-      alert('✅ Data berhasil diimport. Reload halaman untuk melihat hasil.');
+  const file=fileInput.files[0];
+  if(!file)return alert('Pilih file JSON dulu.');
+  const reader=new FileReader();
+  reader.onload=function(e){
+    try{
+      const data=JSON.parse(e.target.result);
+      Object.keys(data).forEach(k=>{
+        if(k.startsWith(STORAGE_PREFIX)) localStorage.setItem(k,data[k]);
+      });
+      alert('✅ Data berhasil diimport. Reload untuk melihat hasil.');
       location.reload();
-    } catch (err) {
-      alert('❌ File tidak valid: ' + err.message);
-    }
+    }catch(err){ alert('❌ File tidak valid: '+err.message); }
   };
   reader.readAsText(file);
 }
-function resetLocalStorage() {
-  if (confirm('Yakin ingin menghapus semua data proyek ini?')) {
-    Object.keys(localStorage).forEach(key => {
-      if (key.startsWith(STORAGE_PREFIX)) localStorage.removeItem(key);
-    });
+function resetLocalStorage(){
+  if(confirm(`Yakin ingin hapus semua data proyek "${project}"?`)){
+    Object.keys(localStorage).forEach(k=>{ if(k.startsWith(STORAGE_PREFIX)) localStorage.removeItem(k); });
     location.reload();
   }
 }
 
-/* === Sinkron Semua File === */
-async function syncAllFiles() {
-  const folder = defaultFolderEl.value.trim() || '';
-  const options = Array.from(dropdownEl.options).filter(o => o.value);
-  if (!options.length) return alert('Tidak ada file di dropdown.');
-  if (!confirm(`Sinkron semua file (${options.length} file)?`)) return;
+// --- Sinkron semua file ---
+async function syncAllFiles(){
+  const options=Array.from(dropdownEl.options).filter(o=>o.value);
+  if(!options.length) return alert('Tidak ada file di dropdown.');
+  if(!confirm(`Sinkron semua file (${options.length} file)?`)) return;
 
-  let success = 0, fail = 0, lastText = '', lastFile = '';
-  for (const opt of options) {
-    try {
-      let path = opt.value.includes('/') ? opt.value : folder + opt.value;
-      const res = await fetch(path + '?t=' + Date.now());
-      if (!res.ok) throw new Error('HTTP ' + res.status);
-      const text = await res.text();
-      localStorage.setItem(getStorageKey(opt.value), JSON.stringify({ inputList: text.trim(), currentPage: 1 }));
-      success++; lastText = text.trim(); lastFile = opt.value;
-    } catch {
-      fail++;
-      console.warn('Gagal fetch file:', opt.value);
-    }
+  let success=0, fail=0, lastText='', lastFile='';
+  for(const opt of options){
+    try{
+      const res=await fetch(opt.value+'?t='+Date.now());
+      if(!res.ok) throw new Error('HTTP '+res.status);
+      const text=await res.text();
+      localStorage.setItem(getStorageKey(opt.value), JSON.stringify({inputList:text.trim(), currentPage:1}));
+      success++; lastText=text.trim(); lastFile=opt.value;
+    }catch{ fail++; }
   }
 
-  if (lastText) {
+  if(lastText){
     inputLinksEl.value = lastText;
     dropdownEl.value = lastFile;
-    localStorage.setItem(STORAGE_PREFIX + 'selectedFile', lastFile);
+    localStorage.setItem(getStorageKey('selectedFile'), lastFile);
     processLinks(); showPage(1);
   }
 
@@ -280,6 +248,12 @@ async function syncAllFiles() {
 
 document.getElementById('ambilFileListLinksBtn').addEventListener('click', syncAllFiles);
 
+// --- Tombol proyek baru ---
+document.getElementById('newProjectBtn').addEventListener('click', ()=>{
+  const newId = 'proj_' + Date.now().toString(36)+'_'+Math.random().toString(36).slice(2,7);
+  window.location.href = window.location.pathname+'?project='+newId;
+});
 </script>
+
 </body>
 </html>
