--- a/oktober1/coba.html
+++ b/oktober1/coba.html
@@ -60,7 +60,7 @@
   <option value="">-- Pilih File TXT --</option>
   <option value="satu.txt">jalb.txt</option>
   <option value="dua.txt">rano.txt</option>
-  <option value="tiga.txt">indah.txt</option>
+  <option value="tiga.txt">fitrh.txt</option>
   <option value="empat.txt">rini.txt</option>
   <option value="lima.txt">nurbad.txt</option>
 </select>
